[tool.poetry]
name = "shakeshake"
version = "0.1.0"
description = ""
authors = ["JeffreyWu <wu19930628@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
cx-freeze = "^7.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
